--- a/kafka-postgre/src/main/resources/application.properties
+++ b/kafka-postgre/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 # postgreDB configuration
-spring.data.postgredb.host=localhost
-spring.data.postgredb.port=27017
-spring.data.postgredb.database=testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 # Kafka configuration
 spring.kafka.bootstrap-servers=localhost:9092
